# riptorrent

./: Cargo.toml  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
crates/bcode/: Cargo.toml
crates/bcode/src/: lib.rs
crates/bcode/src/decode/: mod.rs
crates/bcode/src/encode/: mod.rs
crates/bcode/src/value/: mod.rs
crates/bcode/tests/: decode_bcode.rs  encode_bcode.rs
crates/bcode/tests/common/: mod.rs
crates/builder/: Cargo.toml
crates/builder/src/: lib.rs
crates/builder/src/builder/: mod.rs
crates/builder/tests/: create_builder_and_find_blocks.rs  get_finished_block.rs
crates/message/: Cargo.toml
crates/message/src/: lib.rs
crates/message/src/message/: from_bytes.rs  into_bytes.rs  mod.rs
crates/message/tests/: to_and_from_bytes.rs
crates/peer/: Cargo.toml
crates/peer/src/: lib.rs
crates/peer/src/handshake/: mod.rs
crates/peer/src/peer/: mod.rs
crates/peer/src/read/: mod.rs
crates/peer/src/send/: mod.rs
crates/peer/src/setup/: mod.rs
crates/peer/src/start/: handle_response.rs  mod.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs  open.rs  read.rs  write.rs
crates/protocol/src/functions/: mod.rs
crates/protocol/src/handshake/: mod.rs
crates/torrent/: Cargo.toml
crates/torrent/src/: lib.rs
crates/torrent/src/torrent/: from_bytes.rs  from_utf8.rs  get_left.rs  get_piece_amount.rs  get_piece_length.rs  get_size.rs  mod.rs
crates/torrent/src/torrent_struct/: mod.rs
crates/torrent/tests/: decode_torrent.rs
crates/torrent/tests/common/: mod.rs
crates/tracker/: Cargo.toml
crates/tracker/src/: lib.rs
crates/tracker/src/request/: mod.rs  response.rs
crates/tracker/tests/: send_tracker_request.rs
media/torrents/: Tails 5.6 amd64 IMG (For USB).torrent
src/: cli.rs  decode.rs  main.rs  tests.rs
src/bcode/: mod.rs
src/bcode/bdecode/: mod.rs  parse.rs
src/bcode/bencode/: mod.rs  parse.rs
src/bcode/value/: mod.rs
src/cli/: mod.rs
src/client/: mod.rs  protocol.rs
src/client/message/: mod.rs
src/client/peer/: mod.rs
src/client/protocol/: mod.rs
src/client/request/: mod.rs
src/client/response/: mod.rs
src/decode/: mod.rs  parse.rs
src/torrent/: mod.rs  try_from.rs
