[workspace]
members = ["crates/*"]

[package]
name = "riptorrent"
version = "0.1.0"
authors = ["Jonas Mathisrud Sterud <jonas.sterud@gmail.com>"]
edition = "2021"
description = "BitTorrent client written in Rust"
repository = "https://github.com/jonassterud/riptorrent"
license = "MIT"

[dependencies]
bcode = { version = "0.1.*", path = "crates/bcode" }
torrent = { version = "0.1.*", path = "crates/torrent" }

anyhow = { version = "1.0.65" }
futures = { version = "0.3.24" }