[package]
name = "bcode"
version = "0.1.0"
authors = ["Jonas Mathisrud Sterud <jonas.sterud@gmail.com>"]
edition = "2021"
description = "Encode/decode bencode library"
repository = "https://github.com/jonassterud/riptorrent"
license = "MIT"

[dependencies]
anyhow = { version = "1.0.65" }

[dev-dependencies]
maplit = { version = "1.0.2" }