[package]
name = "builder"
version = "0.1.0"
authors = ["Jonas Mathisrud Sterud <jonas.sterud@gmail.com>"]
edition = "2021"
description = "Downloads and assembles BitTorrent pieces"
repository = "https://github.com/jonassterud/riptorrent"
license = "MIT"

[dependencies]
torrent = { version = "0.1", path = "../torrent" }

anyhow = { version = "1.0" }
rand = { version = "0.8.5" }
