[package]
name = "tracker"
version = "0.1.0"
authors = ["Jonas Mathisrud Sterud <jonas.sterud@gmail.com>"]
edition = "2021"
description = "Communicate with torrent trackers"
repository = "https://github.com/jonassterud/riptorrent"
license = "MIT"

[dependencies]
bcode = { version = "0.1", path = "../bcode" }
torrent = { version = "0.1", path = "../torrent" }

anyhow = { version = "1.0" }
arrayref = { version = "0.3" }
ureq = { version = "2.5" }
urlencoding = { version = "2.1.2" }
async-std = { version = "1.12", features = ["attributes"] }
futures = { version = "0.3" }